--- a/package.json
+++ b/package.json
@@ -17,17 +17,21 @@
   },
   "dependencies": {
     "@mdx-js/react": "^2.3.0",
+    "babel-plugin-styled-components": "^2.1.4",
     "gatsby": "^5.12.4",
     "gatsby-plugin-mdx": "^5.12.0",
     "gatsby-plugin-sitemap": "^6.12.0",
+    "gatsby-plugin-styled-components": "^6.12.0",
     "gatsby-source-filesystem": "^5.12.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "styled-components": "^6.0.8"
   },
   "devDependencies": {
     "@types/node": "^20.3.3",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "@types/styled-components": "^5.1.28",
     "typescript": "^5.1.6"
   }
 }
