--- a/package.json
+++ b/package.json
@@ -17,14 +17,20 @@
   },
   "dependencies": {
     "@mdx-js/react": "^2.3.0",
+    "@types/react-helmet": "^6.1.7",
     "babel-plugin-styled-components": "^2.1.4",
     "gatsby": "^5.12.4",
     "gatsby-plugin-mdx": "^5.12.0",
     "gatsby-plugin-sitemap": "^6.12.0",
     "gatsby-plugin-styled-components": "^6.12.0",
     "gatsby-source-filesystem": "^5.12.0",
+    "katex": "^0.16.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "rehype-katex": "^5.0.0",
+    "remark-html-katex": "^4.0.1",
+    "remark-math": "^3.0.1",
     "styled-components": "^6.0.8"
   },
   "devDependencies": {
