--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@matejmazur/react-katex": "^3.1.3",
     "@mdx-js/react": "^2.3.0",
     "@types/react-helmet": "^6.1.7",
     "babel-plugin-styled-components": "^2.1.4",
@@ -30,8 +31,7 @@
     "react-helmet": "^6.1.0",
     "rehype-katex": "^5.0.0",
     "remark-html-katex": "^4.0.1",
-    "remark-math": "^3.0.1",
-    "styled-components": "^6.0.8"
+    "remark-math": "^3.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.3.3",
