--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@code-hike/mdx": "^0.9.0",
     "@matejmazur/react-katex": "^3.1.3",
     "@mdx-js/react": "^2.3.0",
     "@types/react-helmet": "^6.1.7",
