--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "gatsby": "^5.12.4",
     "gatsby-plugin-google-gtag": "^5.12.0",
     "gatsby-plugin-image": "^3.12.0",
+    "gatsby-plugin-manifest": "^5.12.2",
     "gatsby-plugin-mdx": "^5.12.0",
+    "gatsby-plugin-offline": "^6.12.2",
     "gatsby-plugin-sharp": "^5.12.0",
     "gatsby-plugin-sitemap": "^6.12.0",
     "gatsby-plugin-styled-components": "^6.12.0",
