--- a/package.json
+++ b/package.json
@@ -32,14 +32,12 @@
     "gatsby-plugin-sitemap": "^6.12.0",
     "gatsby-plugin-styled-components": "^6.12.0",
     "gatsby-remark-images": "^7.12.0",
+    "gatsby-remark-katex": "^7.12.0",
     "gatsby-source-filesystem": "^5.12.0",
     "gatsby-transformer-sharp": "^5.12.0",
-    "katex": "^0.16.8",
+    "katex": "^0.13.24",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "rehype-katex": "^5.0.0",
-    "remark-html-katex": "^4.0.1",
-    "remark-math": "^3.0.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.3.3",
